--- a/rep02.html
+++ b/rep02.html
@@ -22,7 +22,7 @@
 <body>
   <div class=header>
     <h1>２週目のレポート ： 公大高専１年実習I-1</h1>
-    <div1組N番 ニックネーム</div>
+    <div1組4番 エアロ</div>
   </div>
   <div class=2week>
     <h2>第2週目</h2>
@@ -62,7 +62,7 @@
     
   </div>
   <div class=footer>
-    作成日：2022年xx月xx日
+    作成日：2022年07月20日
   </div>
 </body>
 </html>
