--- a/rep02.html
+++ b/rep02.html
@@ -28,7 +28,7 @@
     <h2>第2週目</h2>
     <div>
       <h3>2-1 レポートをHTMLで作る</h3>
-      <a href="https://tmhrdoi.github.io/website/rep01.html">１週目のレポート</a><br>
+      <a href="https://AERO007.github.io/website/rep01.html">１週目のレポート</a><br>
       <div>
         1.内容<br>
         ないようないよう<br>
@@ -51,7 +51,7 @@
      <div>
       <h3>2-3 JavaScript体験：３次元モデルのプログラムを作る</h3>
       <img src="3d.png" alt="3D" width="50%" height="50%"><br>
-      <a href="https://tmhrdoi.github.io/website/3d.html">３次元モデル</a><br>                                   
+      <a href="https://xxxxxxx.github.io/website/3d.html">３次元モデル</a><br>                                   
       <div>
         1.内容<br>
         ないようないよう<br>
@@ -62,7 +62,7 @@
     
   </div>
   <div class=footer>
-    作成日：2022年07月20日
+    作成日：2022年xx月xx日
   </div>
 </body>
 </html>
