--- a/rep02.html
+++ b/rep02.html
@@ -28,35 +28,36 @@
     <h2>第2週目</h2>
     <div>
       <h3>2-1 レポートをHTMLで作る</h3>
-      <a href="https://xxxxxx.github.io/website/rep01.html">１週目のレポート</a><br>
+      <a href="https://AERO0707.github.io/website/rep01.html">１週目のレポート</a><br>
       <div>
         1.内容<br>
-        ないようないよう<br>
+        レポート1を作る<br>
         2.感想<br>
-        かんそうかんそう<br>
+        ローマ字がいっぱいあって目がチカチカした。
+        自分のホームページのアドレスを打つ場所見つけれなくて大変だった。<br>
       </div>
     </div>
 
     <div>
       <h3>2-2 機械学習体験</h3>
-      <img src="ML.png" alt="ML" width="50%" height="50%">
+      <img src=" ahttps://github.com/AERO0707/website/blob/master/%E3%82%B0%E3%83%BC.pnglt="ML" width="50%" height="50%">
       <div>
         1.内容<br>
-        ないようないよう<br>
+        カメラを使ってものを識別する。<br>
         2.感想<br>
-        かんそうかんそう<br>        
+        何百枚もカメラで撮るとグーとパーを識別できるなんてすごいと思った。<br>        
       </div>
     </div>
     
      <div>
       <h3>2-3 JavaScript体験：３次元モデルのプログラムを作る</h3>
-      <img src="js.png" alt="3D" width="50%" height="50%"><br>
-      <a href="https://xxxxxxx.github.io/website/3d.html">３次元モデル</a><br>                                   
+      <img src="3d2.png" alt="3D" width="50%" height="50%"><br>
+      <a href="https://AERO0707.github.io/website/3d.html">３次元モデル</a><br>                                   
       <div>
         1.内容<br>
-        ないようないよう<br>
+        WEBプログラムで3dモデルを作る<br>
         2.感想<br>
-        かんそうかんそう<br>
+        3dモデルを自分で改造できるのが楽しかった。<br>
       </div>
     </div>
     
