--- a/rep02.html
+++ b/rep02.html
@@ -39,9 +39,9 @@
     </div>
 
     <div>
-      <h3>2-2 機械学習体験</h3>
+      <h3>2-2 機械学習体https://github.com/AERO0707/website/blob/master/%E3%82%B0%E3%83%BC.png験</h3>
       <img src=”" width="50%" height="50%">
-      <div>https://github.com/AERO0707/website/blob/master/%E3%82%B0%E3%83%BC.png
+      <div>
         1.内容<br>
         カメラを使ってものを識別する。<br>
         2.感想<br>
