--- a/rep02.html
+++ b/rep02.html
@@ -39,8 +39,8 @@
     </div>
 
     <div>
-      <h3>2-2 機械学習体https://github.com/AERO0707/website/blob/master/%E3%82%B0%E3%83%BC.png験</h3>
-      <img src=”%E3%82%B0%E3%83%BC.png" width="50%" height="50%">
+      <h3>2-2 機械学習体験</h3>
+      <img src=”https://github.com/AERO0707/website/blob/master/%E3%82%B0%E3%83%BC.png”="50%" height="50%">
       <div>
         1.内容<br>
         カメラを使ってものを識別する。<br>
