--- a/rep02.html
+++ b/rep02.html
@@ -40,7 +40,7 @@
 
     <div>
       <h3>2-2 機械学習体験</h3>
-      <img src=”https://github.com/AERO0707/website/blob/master/gu-.png”="50%" height="50%">
+      <img src=”gu-.png”="50%" height="50%">
       <div>
         1.内容<br>
         カメラを使ってものを識別する。<br>
