--- a/rep03.html
+++ b/rep03.html
@@ -32,9 +32,10 @@
       <a href="https://tmhrdoi.github.io/website/dengon.html">伝言板</a><br>                                   
       <div>
         1.内容<br>
-        ないようないよう<br>
+        プログラムで伝言板を作ろう<br>
         2.感想<br>
-        かんそうかんそう<br>
+        どんなに小さなミスでもプログラムが間違えたいたら、弾かれて難しかった。
+        でも、プログラムが完成して動いたとき嬉しかった。<br>
       </div>
     </div>
 
