--- a/rep03.html
+++ b/rep03.html
@@ -43,9 +43,9 @@
       <h3>3-2 VR体験</h3>
       <div>
         1.内容<br>
-        ないようないよう<br>
+        VR体験<br>
         2.感想<br>
-        かんそうかんそう<br>
+        自分が動いたら視界もちゃんと動いていてすごいと思った。初めてやったから楽しかった。ミーティングのVRをしたとき、前にホワイトボードがなかったのにしっかり描けていてすごかった。<br>
       </div>
     </div>
   
