--- a/rep01.html
+++ b/rep01.html
@@ -40,7 +40,7 @@
 
     <div>
       <h3>1-2 ゲーム</h3>
-      <img src="game.png" alt="ゲーム" width="50%" height="50%">
+      <img src="game1.png" alt="ゲーム" width="50%" height="50%">
       <div>
         1.内容<br>
         上からりんごを落とし猫に拾わせるゲームを作った。<br>
